--- a/src/messages_de.properties
+++ b/src/messages_de.properties
@@ -1,1 +1,7 @@
 welcome=Willkommen
+
+login.logout=Ausloggen
+login.login=Einloggen
+login.please.doLogin=Bitte logge Dich hier ein:
+
+user.setting=Einstellungen
