--- a/src/messages_de.properties
+++ b/src/messages_de.properties
@@ -1,7 +1,27 @@
 welcome=Willkommen
 
+Login
 login.logout=Ausloggen
 login.login=Einloggen
 login.please.doLogin=Bitte logge Dich hier ein:
+login.newuser=Registrieren
+
+newuser.name=Name
+newuser.vorname=Vorname
+newuser.geschlecht=Geschlecht
+newuser.women=Weiblich
+newuser.man=Männlich
+newuser.indefinite=Unbestimmt
+newuser.email=Email
+newuser.password=Password
+newuser.retype=Password wiederholen
+newuser.lang=Sprache
+newuser.german=Deutsch
+newuser.french=Französisch
 
 user.setting=Einstellungen
+
+title.register=User anlegen
+
+button.cancel=Abbruch
+button.ok=Ok
