--- a/src/messages.properties
+++ b/src/messages.properties
@@ -25,3 +25,11 @@ title.register=User anlegen
 
 button.cancel=Abbruch
 button.ok=Ok
+
+timetable.monday=Montag
+timetable.tuesday=Dienstag
+timetable.wednesday=Mittwoch
+timetable.thursday=Donnerstag
+timetable.friday=Freitag
+timetable.saturday=Samstag
+timetable.sunday=Sonntag
