--- a/src/messages.properties
+++ b/src/messages.properties
@@ -1,6 +1,6 @@
 welcome=Willkommen
 
-Login
+
 login.logout=Ausloggen
 login.login=Einloggen
 login.please.doLogin=Bitte logge Dich hier ein:
@@ -33,3 +33,8 @@ timetable.thursday=Donnerstag
 timetable.friday=Freitag
 timetable.saturday=Samstag
 timetable.sunday=Sonntag
+
+menu.cours.management=Kurse Managen
+menu.cours.management.setting.tag=Tag verwalten
+menu.cours.management.setting.typ=Typ verwalten
+menu.cours.management.setting.cours=Kurs verwalten
