--- a/src/messages_de.properties
+++ b/src/messages_de.properties
@@ -1,6 +1,6 @@
 welcome=Willkommen
 
-Login
+
 login.logout=Ausloggen
 login.login=Einloggen
 login.please.doLogin=Bitte logge Dich hier ein:
@@ -25,3 +25,16 @@ title.register=User anlegen
 
 button.cancel=Abbruch
 button.ok=Ok
+
+timetable.monday=Montag
+timetable.tuesday=Dienstag
+timetable.wednesday=Mittwoch
+timetable.thursday=Donnerstag
+timetable.friday=Freitag
+timetable.saturday=Samstag
+timetable.sunday=Sonntag
+
+menu.cours.management=Kurse Managen
+menu.cours.management.setting.tag=Tag verwalten
+menu.cours.management.setting.typ=Typ verwalten
+menu.cours.management.setting.cours=Kurs verwalten
