--- a/src/messages_fr.properties
+++ b/src/messages_fr.properties
@@ -1,1 +1,40 @@
-welcome=FR_Willkommen_FR
+welcome=Willkommen_FR
+
+
+login.logout=Ausloggen_FR
+login.login=Einloggen_FR
+login.please.doLogin=Bitte logge Dich hier ein:_FR
+login.newuser=Registrieren_FR
+
+newuser.name=Name_FR
+newuser.vorname=Vorname_FR
+newuser.geschlecht=Geschlecht_FR
+newuser.women=Weiblich_FR
+newuser.man=Männlich_FR
+newuser.indefinite=Unbestimmt_FR
+newuser.email=Email_FR
+newuser.password=Password_FR
+newuser.retype=Password wiederholen_FR
+newuser.lang=Sprache_FR
+newuser.german=Deutsch_FR
+newuser.french=Französisch_FR
+
+user.setting=Einstellungen_FR
+
+title.register=User anlegen_FR
+
+button.cancel=Abbruch_FR
+button.ok=Ok_FR
+
+timetable.monday=Montag_FR
+timetable.tuesday=Dienstag_FR
+timetable.wednesday=Mittwoch_FR
+timetable.thursday=Donnerstag_FR
+timetable.friday=Freitag_FR
+timetable.saturday=Samstag_FR
+timetable.sunday=Sonntag_FR
+
+menu.cours.management=Kurse Managen_FR
+menu.cours.management.setting.tag=Tag verwalten_FR
+menu.cours.management.setting.typ=Typ verwalten_FR
+menu.cours.management.setting.cours=Kurs_FR
