Test Tag einfügen

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -38,3 +38,10 @@ menu.cours.management=Kurse Managen
 menu.cours.management.setting.tag=Tag verwalten
 menu.cours.management.setting.typ=Typ verwalten
 menu.cours.management.setting.cours=Kurs verwalten
+
+crud.edit=Bearbeiten
+crud.delete=Löschen
+crud.save=Speichern
+cud.upadte=Aktualisieren
+
+tag.name=Tag Name
