--- a/src/messages_fr.properties
+++ b/src/messages_fr.properties
@@ -38,3 +38,10 @@ menu.cours.management=Kurse Managen_FR
 menu.cours.management.setting.tag=Tag verwalten_FR
 menu.cours.management.setting.typ=Typ verwalten_FR
 menu.cours.management.setting.cours=Kurs_FR
+
+crud.edit=Bearbeiten_FR
+crud.delete=Löschen_FR
+crud.save=Speichern_FR
+cud.upadte=Aktualisieren_FR
+
+tag.name=Tag Name_FR
